change the prefix of tmux to C-"

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,7 +13,9 @@ set -g default-shell /bin/zsh
 
 # tmux prefix
 unbind C-b
-set -g prefix C-a
+# reset prefix to C-s, as C-a is the moving to the begining of the line
+set -g prefix 'C-\'
+bind-key 'C-\' send-prefix
 
 # paste
 unbind C-p
