--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,7 +39,8 @@ bind -r Up resize-pane -U 1
 # smart pane switching with awareness of vim splits imported by T.Z
 # test this is in the vim process to run the navigation.
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+unbind -n C-h
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
