--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -104,3 +104,5 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
