Add check list gem and modify tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,10 +12,11 @@ set -g default-shell /bin/zsh
 ###########################
 
 # tmux prefix
-unbind C-b
+#unbind C-b
 # reset prefix to C-s, as C-a is the moving to the begining of the line
-set -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+#unbind C-\
+#set-option -g prefix 'C-\'
+#bind-key 'C-\' send-prefix
 
 # paste
 unbind C-p
