--- a/bin/config_checklist.yml
+++ b/bin/config_checklist.yml
@@ -3,19 +3,21 @@ unused:
   list:
     - 'Update jira status from IN PROGRESS to REVIEW?'
 jira:
-  name: "Check JIRA:"
+  name: 'Check JIRA:'
   list: 
-    - 'Update jira status from IN PROGRESS to REVIEW?'
+    - 'Update jira status from #{IN PROGRESS.red} to #{REVIEW.green}?'
     - 'Write comment to explain the solution/defect/discussion?'
 
 mistakes:
-  name: "Check Mistakes:"
+  name: 'Check Mistakes:'
   list:
     - 'all single quote in js, ruby, yml, gemfile?'
     - '2 space indent and white spaces?'
+    - 'Alphabetic order in translation file/Gemfile'
+    - 'Fix typo?'
 
 js:
-  name: "Check JS:"
+  name: 'Check JS:'
   list:
     - 'Function documentation follow Tomdoc/project convention/Open source convention?'
     - 'Documentation needs to include summary, arguments, example, external links, return and exceptions?'
@@ -27,14 +29,31 @@ js:
     - 'Boolean variable or function name started with "is"/"can"/"has"/"should"?'
     - 'Private method started with _?'
 
+ruby:
+  name: 'Check Ruby:'
+  list:
+    - 'No "=>" rocket Hash syntax'
+
+Translation:
+  name: 'Check translation:'
+  list:
+    - 'user-facing message, clearly?'
+    - 'inject the value dependency?'
+
+Test:
+  name: 'Check test description:'
+  list:
+    - 'Describe, context, it, easy to read?'
+    - 'In it, use "requires"/"returns"/"validates", no should'
+
 code_review:
-  name: "Check CR:"
+  name: 'Check CR:'
   list:
     - 'Include Jenkins, Jira, Github?'
-    - 'title readable? description, OK?'
+    - 'title "ACADEM-8888: Short title description", OK?'
     - 'All files in code review, display right?'
 
 github:
-  name: "Check Github:"
+  name: 'Check Github:'
   list:
     - 'Go through all changed file and explain changing reason?'
