--- a/alfred/Alfred.alfredpreferences/preferences/features/clipboard/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/features/clipboard/prefs.plist
@@ -2,15 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>hotkey</key>
-	<dict>
-		<key>key</key>
-		<integer>8</integer>
-		<key>mod</key>
-		<integer>655360</integer>
-		<key>string</key>
-		<string>C</string>
-	</dict>
+	<key>persistFor</key>
+	<integer>3</integer>
 	<key>snippetKeyword</key>
 	<string>;</string>
 </dict>
