Updated zsh, vim, styleguide, snippets and alfred

--- a/alfred/Alfred.alfredpreferences/preferences/features/terminal/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/features/terminal/prefs.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>application</key>
+	<integer>1</integer>
 	<key>custom</key>
 	<string>-- This is v0.3 of the custom script for AlfredApp for iTerm 2.1.1
 -- Please see https://github.com/stuartcryan/custom-iterm-applescripts-for-alfred/
@@ -46,7 +48,5 @@ on alfred_script(q)
 		" with parameters {q}
 	end if
 end alfred_script</string>
-	<key>prefix</key>
-	<integer>4</integer>
 </dict>
 </plist>
