--- a/styleguide/.rubocop.yml
+++ b/styleguide/.rubocop.yml
@@ -1,5 +1,3 @@
-# These rules below override the default rules provided by rubocop.
-
 # Maximum line length of 120 chars
 LineLength:
   Max: 120
@@ -10,7 +8,8 @@ MethodLength:
 
 # Avoid using {...} for multi-line blocks (multiline chaining is always ugly).
 # Prefer {...} over do...end for single-line blocks.
-BlockDelimiters:
+# Not compatable with 2.2.2
+Blocks:
   Enabled: false
 
 # Favor unless over if for negative conditions (or control flow or).
