--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -107,3 +107,9 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
